# tokio-graceful-shutdown

./: .coderabbit.yaml  .gitignore  Cargo.toml  LICENSE-MIT  README.md  TODO.txt  Thoughts.txt  UPCOMING_VERSION_CHANGES.txt
.github/workflows/: audit.yml  ci.yml  codecov.yml  coverage.yml  coverage_old.yml  coveralls.yml  leaks.yml  rust-clippy.yml
examples/: 00_modularized.rs  01_normal_shutdown.rs  02_shutdown_timeout.rs  02_structs.rs  03_shutdown_timeout.rs  03_submodule_finished.rs  03_subsystem_finished.rs  04_submodule_finished_with_error.rs  04_subsystem_finished.rs  04_subsystem_finished_with_error.rs  05_nested_subsystems.rs  05_subsystem_finished_with_error.rs  06_nested_error.rs  06_nested_subsystems.rs  07_nested_error.rs  07_panic_handling.rs  08_panic_handling.rs  08_task_cancellation.rs  09_request_shutdown.rs  09_task_cancellation.rs  10_docs_rs_example.rs  10_lambda_subsystem.rs  10_request_shutdown.rs  11_double_panic.rs  12_subsystem_auto_restart.rs  13_partial_shutdown.rs  14_partial_shutdown_error.rs  15_decoupled_error_handling.rs  15_without_anyhow.rs  15_without_miette.rs  16_with_anyhow.rs  16_with_miette.rs  17_with_eyre.rs  18_error_type_passthrough.rs  19_sequential_shutdown.rs  20_orchestrated_shutdown_order.rs  21_tcp_echo_server.rs  22_subsystem_abort.rs  23_shutdown_from_external.rs  23_shutdown_hooks.rs  (+12 more)
examples-old/: 01_normal_shutdown.rs  03_submodule_finished.rs  04_submodule_finished_with_error.rs
src/: THOUGHTS.txt  err_types.rs  error_action.rs  errors.rs  event.rs  exit_state.rs  future_ext.rs  into_subsystem.rs  lib.rs  runner.rs  shutdown_hooks.rs  shutdown_token.rs  signal_handling.rs  submodule_lifetimes.rs  subsystem.rs  tokio_task.rs  tokio_unstable.rs  toplevel.rs
src-old/: signal_handling.rs
src/api/: mod.rs  subsystem_handle.rs
src/error_action/: tests.rs
src/errors/: tests.rs
src/internal/: mod.rs
src/internal/subsystem_tree/: mod.rs  node.rs  parent.rs
src/internal/utils/: mod.rs
src/runner/: alive_guard.rs
src/runner/alive_guard/: tests.rs
src/subsys/: lambda.rs  mod.rs
src/subsystem/: data.rs  descriptor.rs  error_collector.rs  handle.rs  identifier.rs  mod.rs  nested_subsystem.rs  partial_shutdown_errors.rs  subsystem_builder.rs  subsystem_finished_future.rs  subsystem_handle.rs
src/subsystem/error_collector/: tests.rs
src/subsystem/subsystem_handle/: tests.rs
src/utils/: joiner_token.rs  mod.rs  remote_drop_collection.rs  shutdown_guard.rs  wait_forever.rs
src/utils/joiner_token/: tests.rs
src/utils/remote_drop_collection/: tests.rs
tests/: abort.rs  cancel_on_shutdown.rs  integration_test.rs  integration_test_2.rs  memory_leaks.rs  nested_toplevel.rs  nested_toplevel.rs.old  rewrite_tests.rs  shutdown_hooks.rs  sigint_hook.rs  sigterm_hook.rs  subsystem_handle.rs
tests/common/: event.rs  immediate.rs  mod.rs  slow_shutdown.rs  subsystem_mock.rs
