[package]
name = "tokio-graceful-shutdown"
authors = ["Finomnis <finomnis@gmail.com>"]
version = "0.19.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Finomnis/tokio-graceful-shutdown"
description = "Utilities to perform a graceful shutdown on a Tokio based service."
keywords = ["tokio", "shutdown"]
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    "/.gitignore",
    "/.github/",
    "/TODO.txt",
    "/UPCOMING_VERSION_CHANGES.txt",
]

[features]
# Enable task naming and task caller location.
tracing = ["tokio/tracing"]

[[example]]
name = "tokio_console"
required-features = ["tracing"]


[dependencies]
tracing = { version = "0.1.37", default-features = false }

tokio = { version = "1.39.0", default-features = false, features = [
    "signal",
    "rt",
    "macros",
    "time",
] }
tokio-util = { version = "0.7.10", default-features = false }

pin-project-lite = "0.2.13"
thiserror = "2.0.3"
miette = "7.0.0"
atomic = "0.6.0"
bytemuck = { version = "1.14.0", features = ["derive"] }

[dev-dependencies]
# Error propagation
anyhow = "1.0.75"
eyre = "0.6.12"
miette = { version = "7.2.0", features = ["fancy"] }

# Logging
tracing-subscriber = "0.3.17"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }

# Tokio
tokio = { version = "1.39.0", features = ["full", "test-util"] }

# Hyper example
hyper = { version = "1.0.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
tokio-util = { version = "0.7.10", default-features = false, features = ["rt"] }
bytes = "1.5.0"
http-body-util = "0.1.0"

futures = "0.3.31"

# tokio-console
console-subscriber = "0.5.0"

# For testing unix signals
[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.30.1", default-features = false, features = ["signal"] }

# Make leak sanitizer more reliable
[profile.dev]
opt-level = 1

# Define `tokio_unstable` config for linter
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
